0.40.3 (2017-01-11/unreleased)
------------------
- support for non-authenticated queries (such as opengraph lookups)
- api_proxy now supports `get_data` kwarg, which is passed into the `requests` library as `params`.
- FacebookHub now accepts an `unauthenticated_hub` argument
- cleaned up some whitespace

0.40.2 (2015-10-15)
------------------
- aliased `request.registry.settings` to `registry_settings` on setup.

0.40.1 (2015-10-15)
------------------
- added auth_type to FacebookApiUrls.oauth_token__url_dialog
- fixed how auth_type is appended to urls
- BREAKING CHANGE FacebookApiUrls.oauth_code__url_dialog now expects `redirect_uri, scope` NOT `scope, redirect_uri`.  this is the only place in the code where `scope` preceded `redirect_uri`.


0.30.3 (2015-10-08)
------------------
- added `auth_type` to `oauth_code__url_dialog` methods (see https://developers.facebook.com/docs/facebook-login/permissions/v2.5#adding)
- added `access_token` arg to `api_proxy`
- cleaned up some misc formatting

0.30.2 (2015-04-09)
------------------
- fixed wrong kwargs on `oauth_code__url_access_token` and `self.oauth_code__get_access_token`


0.30.0 (2015-04-01)
------------------
- added in corred BSD license
- merging in changes from kalilou/facebook_utils


0.20.3 (2014-07-17)
------------------
- updated batch process logic to be backwards compatible.


0.20.2 (2013-05-21)
------------------
- updated batch process logic to be backwards compatible.


0.20.1 (2013-05-21)
------------------
- added in ssl_verify param to __init__ and api_proxy calls


0.20.0 (2013-05-20)
------------------

- migrated to requests.  this sucks less.


0.19 (2013-05-7)
------------------

- catching the following exceptions:
	httplib.BadStatusLine
	httplib.InvalidUrl
	urllib2.URLError
- ensured correct ordering of exceptions caught


0.18 (2013-05-7)
------------------
